--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "ag-grid-react": "^27.2.1",
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
+    "pigeon-maps": "^0.21.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.3.2",
     "reactstrap": "^9.0.2",
     "web-vitals": "^2.1.4"
   },
