--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "ag-grid-react": "^27.2.1",
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "pigeon-maps": "^0.21.0",
     "react": "^18.0.0",
+    "react-chartjs2": "^1.2.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
