--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^3.7.1",
     "pigeon-maps": "^0.21.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-chartjs2": "^1.2.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
